更新 build.gradle revert to working version