@@ -1,107 +1,112 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+apply plugin: 'com.android.application'
+apply plugin: 'io.objectbox' // 这个插件必须加！
+// ✅ 未来姐姐的测试注释：这是一个小修改
+
+dependencies 
+{
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  implementation 'com.jakewharton:butterknife:10.2.3'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'  // ✅ 注意是 -compiler
+  implementation 'com.google.code.gson:gson:2.8.2'
+  implementation 'org.apache.commons:commons-lang3:3.4'
+  implementation 'org.apache.commons:commons-io:1.3.2'
+  implementation 'com.github.hxcan:CodePosition:2023.5.19'
+  implementation 'com.mcxiaoke.volley:library:1.0.19'
+  implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+  implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '1.6.0'
+  implementation group: 'com.koushikdutta.async', name: 'androidasync', version: '2.1.7'
+  implementation 'androidx.multidex:multidex:2.0.1'
+  implementation 'io.noties.markwon:core:4.6.1'
+  implementation 'com.jcraft:jsch:0.1.55'
+  implementation 'io.noties.markwon:ext-strikethrough:4.6.1'
+  implementation 'io.noties.markwon:ext-tables:4.6.1'
+  implementation 'com.belerweb:pinyin4j:2.5.1'
+  implementation 'androidx.annotation:annotation:1.5.0'
+  implementation 'androidx.appcompat:appcompat:1.6.1' // Or the latest version
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'org.tensorflow:tensorflow-lite:1.12.0'
+  implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:2.16.1'
+  implementation 'org.tensorflow:tensorflow-lite-support:0.4.4'
+  implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0' // Or the latest version
+  implementation 'org.jetbrains:annotations:23.0.0' // Or the latest version
+  implementation 'androidx.recyclerview:recyclerview:1.3.0' // 或者使用最新的版本
+  implementation 'com.github.hxcan:victoriafresh.android:2024.6.9'
+  implementation 'com.upokecenter:cbor:4.4.4'
+  // 在dependencies里加上ObjectBox
+  implementation 'io.objectbox:objectbox-android:5.1.0'
+  // 添加注解处理器
+  annotationProcessor 'io.objectbox:objectbox-processor:5.1.0'
+  implementation 'commons-net:commons-net:3.8.0'
 }
 
-defaultConfig {
-    namespace 'com.stupidbeauty.sisterfuture'
-    compileSdk 34
-    defaultConfig {
-        applicationId "com.stupidbeauty.sisterfuture"
-        minSdk 21
-        targetSdk 34
-        versionCode 107
-        versionName "1.0.98"
+android 
+{
+  lint 
+  {
+    baseline = file("lint-baseline.xml")
+  }
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  buildFeatures 
+  {
+    buildConfig = true
+  }
+
+  compileSdkVersion 33
+  buildToolsVersion '28.0.3'
+  namespace 'com.stupidbeauty.sisterfuture'
+
+  defaultConfig 
+  {
+    applicationId "com.stupidbeauty.sisterfuture"
+    minSdkVersion 21
+    targetSdkVersion 28
+    versionCode 652
+    versionName "2026.2.1"
+    multiDexEnabled true
+  }
+
+  buildTypes 
+  {
+    release 
+    {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
     }
-}
+  }
 
-// 签加调试签名配置
-signingConfigs {
-    debug {
-        storeFile file('../keystore/debug.keystore')
-        storePassword 'android'
-        keyAlias 'androiddebugkey'
-        keyPassword 'android'
+  sourceSets 
+  {
+    main 
+    {
+      jniLibs.srcDirs = ['libs']
     }
-}
+  }
 
-buildTypes {
-    release {
-        minifyEnabled false
-        proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    aaptOptions {
+        noCompress "tflite"
     }
+
 }
 
-// 应用调试签名到所有构建类型
-buildTypes.all {
-    signingConfig signingConfigs.debug
-}
+// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16
 
-compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-}
+// # enable internal JDK API access at runtime
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+//         # essential for butterknife
+        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
 
-kotlinOptions {
-    jvmTarget = '1.8'
-}
-
-buildFeatures {
-    compose true
-    prefab true
-}
-
-dependencies {
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.6'
-    implementation 'androidx.activity:activity-compose:1.9.2'
-    implementation platform('androidx.compose:compose-bom:2024.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.7.7'
-    implementation 'androidx.navigation:navigation-ui:2.7.7'
-    implementation 'androidx.preference:preference:1.2.1'
-    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
-    implementation 'androidx.documentfile:documentfile:1.0.1'
-    implementation 'androidx.webkit:webkit:1.10.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-    implementation 'com.google.code.gson:gson:2.11.0'
-    implementation 'com.google.protobuf:protobuf-java:3.25.3'
-    implementation 'com.google.protobuf:protobuf-javalite:3.25.3'
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.19.1'
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.19.1'
-    implementation 'com.google.android.exoplayer:extension-mediasession:2.19.1'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
-    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
-    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.4'
-    implementation 'org.tensorflow:tensorflow-lite-gpu:2.13.0'
-    implementation 'org.pytorch:pytorch_android_lite:1.13.1'
-    implementation 'org.pytorch:pytorch_android_torchvision_lite:1.13.1'
-    implementation 'net.lingala.zip4j:zip4j:2.11.1'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.6'
-    implementation 'com.yanzhenjie:permission:2.0.3'
-    implementation 'androidx.camera:camera-camera2:1.4.0-alpha02'
-    implementation 'androidx.camera:camera-lifecycle:1.4.0-alpha02'
-    implementation 'androidx.camera:camera-view:1.4.0-alpha02'
-    implementation 'androidx.camera:camera-extensions:1.4.0-alpha02'
-    implementation 'androidx.concurrent:concurrent-futures:1.2.0-alpha02'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation project(':externalNativeBuilds')
+//         # if you need Glide or LomBok
+//         # these may not be the exact list, but it works for me
+        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
+    ]
 }
